--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <!-- Шапка страницы -->
         
         <header class="header">
-            <div class="header-container">
+            <div class="header container">
                 <nav class="site-nav">
                     <a class="logo" href="./index.html"><span>Web</span>Studio</a>
                     <ul class="menu-nav">
@@ -33,6 +33,7 @@
                     </header>
         <main>
             <section class="menu">
+                <div class="container">
                 <div class="menu-container">
                 <ul class="list-menu">
                     <li><button class="button-menu" type="submit">Все </button></li>
@@ -87,10 +88,11 @@
         </li>
         </ul>
         </div>
+        </div>
         </section>
     </main>
         <footer class="footer-section">
-            <div class="footer-container">
+            <div class="footer container">
                 <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
                 <div class="footer-address">
                     <address class="address">
