--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
      <li><a class="link" href="#">Студия</a></li>
      <li><a class="link" href="./portfolio.html">Портфолио</a></li>
      <li><a class="link" href="#">Контакты</a></li>
-    </ul>
-</nav>
+    </ul> 
+</nav> 
 <div class="container-nav">
      <ul class="nav-contacs">
-      <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+      <li><a href="mailto:info@devstudio.com">
+        <svg class="link-icon">
+          <use href="./img/symbol-defs.svg#icon-envelope-hover"></use> </svg> info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111"><svg class="link-icon">
+        <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+      </svg> +38 096 111 11 11</a></li>
      </ul>
     </div>
     </div>
@@ -47,19 +51,39 @@
     <h2> <!-- Особености -->  </h2>
     <ul class="features">
         <li class="features-item">
+           <div class="thumb">
+          <svg class="features-icon">
+            <use href="./img/symbol-defs.svg#icon-antenna"></use>
+          </svg>
+          </div>
         <h3 class="title-features">Внимание к деталям</h3>
         <p class="text-features">Идейные соображения, а также начало повседневной работы по 
         формированию позиции.</p></li>
         <li class="features-item">
+          <div class="thumb">
+          <svg class="features-icon">
+            <use href="./img/symbol-defs.svg#icon-clock"></use>
+          </svg>
+          </div>
         <h3 class="title-features">Пунктуальность</h3>
         <p class="text-features">Идейные соображения, а также начало повседневной работы по
         формированию позиции.</p></li>
         <li class="features-item">
+          <div class="thumb">
+          <svg class="features-icon">
+            <use href="./img/symbol-defs.svg#icon-diagram"></use>
+          </svg>
+          </div>
         <h3 class="title-features">Планирование</h3>
         <p class="text-features">Равным образом консультация с широким активом в значительной
           степени обуславливает.</p>
         </li>
         <li class="features-item">
+          <div class="thumb">
+          <svg class="features-icon">
+            <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+          </svg>
+          </div>
         <h3 class="title-features">Современные технологии</h3>
         <p class="text-features">Значимость этих проблем настолько очевидна, что реализация
      плановых заданий.</p>
@@ -86,18 +110,66 @@
           <li><img src="./img/Демьяненко.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Игорь Демьяненко</h3>
           <p class="teammate-name-posittion">Product Designer</p>
+        <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+              <use href="./img/symbol-defs.svg#icon-facebook"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+              <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+          </svg> </a>
         </li>
           <li><img src="./img/Репина.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Ольга Репина</h3>
           <p class="teammate-name-posittion">Frontend Developer</p>
+        <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-facebook"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+          </svg> </a>
         </li>
           <li><img src="./img/Тарасов.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Николай Тарасов</h3>
           <p class="teammate-name-posittion">Marketing</p>
+        <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-facebook"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+          </svg> </a>
         </li>
           <li><img src="./img/Ермаков.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Михаил Ермаков</h3>
           <p class="teammate-name-posittion">UI Designer</p>
+        <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-facebook"></use>
+          </svg> </a>
+        <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+          </svg> </a>
         </li>
         </ul>
         </div>
@@ -114,7 +186,23 @@
     <address class="address-contact">
       <a href="mailto:info@example.com">info@example.com</a> 
       <br><a href="tel:+380991111111">+38 099 111 11 11</a>  
-    </address>    
+    </address> 
+    <section>
+      <h1>Присоединяйтесь</h1>
+    <div><a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+      </svg> </a>
+    <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+      </svg> </a>
+    <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+      </svg> </a>
+    <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+      </svg> </a>
+    </div>   
+    </section>
     </div>
     </div>
 </footer>
