Редактирует иконки в хедере

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </nav> 
 <div class="container-nav">
      <ul class="nav-contacs">
-      <li><a href="mailto:info@devstudio.com">
+      <li><a class="contact-item" href="mailto:info@devstudio.com">
         <svg class="link-icon">
           <use href="./img/symbol-defs.svg#icon-envelope-hover"></use> </svg> info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111"><svg class="link-icon">
+      <li><a class="contact-item" href="tel:+380961111111"><svg class="link-icon">
         <use href="./img/symbol-defs.svg#icon-smartphone"></use>
       </svg> +38 096 111 11 11</a></li>
      </ul>
@@ -53,7 +53,7 @@
         <li class="features-item">
            <div class="thumb">
           <svg class="features-icon">
-            <use href="./img/symbol-defs.svg#icon-antenna"></use>
+            <use href="./img/symbol-defs.svg#icon-antenna" width="70px" height="70px"></use>
           </svg>
           </div>
         <h3 class="title-features">Внимание к деталям</h3>
@@ -62,7 +62,7 @@
         <li class="features-item">
           <div class="thumb">
           <svg class="features-icon">
-            <use href="./img/symbol-defs.svg#icon-clock"></use>
+            <use href="./img/symbol-defs.svg#icon-clock" width="70px" height="70px"></use>
           </svg>
           </div>
         <h3 class="title-features">Пунктуальность</h3>
@@ -71,7 +71,7 @@
         <li class="features-item">
           <div class="thumb">
           <svg class="features-icon">
-            <use href="./img/symbol-defs.svg#icon-diagram"></use>
+            <use href="./img/symbol-defs.svg#icon-diagram" width="70px" height="70px"></use>
           </svg>
           </div>
         <h3 class="title-features">Планирование</h3>
@@ -81,7 +81,7 @@
         <li class="features-item">
           <div class="thumb">
           <svg class="features-icon">
-            <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+            <use href="./img/symbol-defs.svg#icon-astronaut" width="70px" height="70px"></use>
           </svg>
           </div>
         <h3 class="title-features">Современные технологии</h3>
