--- a/index.html
+++ b/index.html
@@ -174,6 +174,43 @@
         </ul>
         </div>
     </section>
+    <section class="partner">
+      <div class="container partner"></div>
+      <h1>Постоянные клиенты</h1>
+      <ul class="partner-list">
+      <li>
+        <a class="partner-link-icon" href="ya$co"> <svg class="partner-icon">
+            <use href="./img/symbol-defs.svg#icon-logo-1" width="44" height="49"></use>
+          </svg> </a>
+      </li>
+      <li>
+        <a class="partner-link-icon" href="tagline here"> <svg class="partner-icon">
+            <use href="./img/symbol-defs.svg#icon-logo-2 " width="40" height="52"></use>
+          </svg> </a>
+      </li>
+      <li>
+        <a class="partner-link-icon" href="company"> <svg class="partner-icon">
+            <use href="./img/symbol-defs.svg#icon-Object" width="41" height="42"></use>
+          </svg> </a>
+      </li>
+      <li>
+        <a class="partner-link-icon" href="fosterpeters"> <svg class="partner-icon">
+            <use href="./img/symbol-defs.svg#icon-logo-4" width="80px" height="42px"></use>
+          </svg> </a>
+      </li>
+      <li>
+        <a class="partner-link-icon" href="brand"> <svg class="partner-icon">
+            <use href="./img/symbol-defs.svg#icon-logo-5" width="59" height="47"></use>
+          </svg> </a>
+      </li>
+      <li>
+        <a class="partner-link-icon" href="tagline"> <svg class="partner-icon">
+            <use href="./img/symbol-defs.svg#icon-Object-1"width="88" height="45"></use>
+          </svg> </a>
+      </li>
+      </ul>
+
+    </section>
 </main>
         <!-- Футер -->
 <footer class="footer-section"> 
@@ -187,18 +224,19 @@
       <a href="mailto:info@example.com">info@example.com</a> 
       <br><a href="tel:+380991111111">+38 099 111 11 11</a>  
     </address> 
-    <section>
-      <h1>Присоединяйтесь</h1>
-    <div><a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+    <section class="action">
+      <div>
+      <p>Присоединяйтесь<p>
+    <a class="footer-link-icon" href="instagram"> <svg class="social-icon">
         <use href="./img/symbol-defs.svg#icon-instagram"></use>
       </svg> </a>
-    <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+    <a class="footer-link-icon" href="twitter"> <svg class="social-icon">
         <use href="./img/symbol-defs.svg#icon-twitter"></use>
       </svg> </a>
-    <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+    <a class="footer-link-icon" href="facebook"> <svg class="social-icon">
         <use href="./img/symbol-defs.svg#icon-facebook"></use>
       </svg> </a>
-    <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+    <a class="footer-link-icon" href="linkedin"> <svg class="social-icon">
         <use href="./img/symbol-defs.svg#icon-linkedin"></use>
       </svg> </a>
     </div>   
