Добавляет в футере соц иконки

--- a/index.html
+++ b/index.html
@@ -110,77 +110,117 @@
           <li><img src="./img/Демьяненко.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Игорь Демьяненко</h3>
           <p class="teammate-name-posittion">Product Designer</p>
-        <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+          <ul class="social-list">
+            <li  class="social-item">
+          <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+          <use href="./img/symbol-defs.svg#icon-instagram"></use>
           </svg> </a>
-        <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-twitter"></use>
+            </li>
+          <li class="social-item">
+          <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+    <use href="./img/symbol-defs.svg#icon-twitter"></use>
           </svg> </a>
-        <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+            </li>
+          <li class="social-item">
+          <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
               <use href="./img/symbol-defs.svg#icon-facebook"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+            </svg> </a>
+          </li>
+          <li class="social-item" class="social-item">
+          <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
               <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-          </svg> </a>
+            </svg> </a>
+          </li class="social-item" class="social-item">
+         </ul>
         </li>
           <li><img src="./img/Репина.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Ольга Репина</h3>
           <p class="teammate-name-posittion">Frontend Developer</p>
-        <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-instagram"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-twitter"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-facebook"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-          </svg> </a>
+        <ul class="social-list">
+          <li class="social-item" class="social-item">
+            <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item" class="social-item">
+            <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item" class="social-item">
+            <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item" class="social-item">
+            <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+              </svg> </a>
+          </li>
+        </ul>
         </li>
           <li><img src="./img/Тарасов.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Николай Тарасов</h3>
           <p class="teammate-name-posittion">Marketing</p>
-        <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-instagram"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-twitter"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-facebook"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-          </svg> </a>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item">
+            <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item">
+            <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item">
+            <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+              </svg> </a>
+          </li>
+        </ul>
         </li>
           <li><img src="./img/Ермаков.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Михаил Ермаков</h3>
           <p class="teammate-name-posittion">UI Designer</p>
-        <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-instagram"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-twitter"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-facebook"></use>
-          </svg> </a>
-        <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
-            <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-          </svg> </a>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item">
+            <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item">
+            <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+              </svg> </a>
+          </li>
+          <li class="social-item">
+            <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+              </svg> </a>
+          </li>
+        </ul>
         </li>
         </ul>
         </div>
     </section>
     <section class="partner">
-      <div class="container partner"></div>
+      <div class="container"></div>
       <h1>Постоянные клиенты</h1>
       <ul class="partner-list">
       <li>
         <a class="partner-link-icon" href="ya$co"> <svg class="partner-icon">
-            <use href="./img/symbol-defs.svg#icon-logo-1" width="44" height="49"></use>
+            <use href="./img/symbol-defs.svg#icon-logo-1" width="44px" height="49px"></use>
           </svg> </a>
       </li>
       <li>
@@ -215,7 +255,9 @@
         <!-- Футер -->
 <footer class="footer-section"> 
   <div class="footer container">
+    <div class="footer-inf">
     <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+  
     <div class="footer-address">
       <address class="address">
         г. Киев, пр-т Леси Украинки, 26
@@ -224,24 +266,26 @@
       <a href="mailto:info@example.com">info@example.com</a> 
       <br><a href="tel:+380991111111">+38 099 111 11 11</a>  
     </address> 
-    <section class="action">
-      <div>
-      <p>Присоединяйтесь<p>
-    <a class="footer-link-icon" href="instagram"> <svg class="social-icon">
-        <use href="./img/symbol-defs.svg#icon-instagram"></use>
-      </svg> </a>
-    <a class="footer-link-icon" href="twitter"> <svg class="social-icon">
-        <use href="./img/symbol-defs.svg#icon-twitter"></use>
-      </svg> </a>
-    <a class="footer-link-icon" href="facebook"> <svg class="social-icon">
-        <use href="./img/symbol-defs.svg#icon-facebook"></use>
-      </svg> </a>
-    <a class="footer-link-icon" href="linkedin"> <svg class="social-icon">
-        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-      </svg> </a>
-    </div>   
-    </section>
     </div>
+    </div>
+    <section class="action">
+      <p>Присоединяйтесь</p>
+      <ul class="footer-social-list">
+        <li><a class="footer-link-icon" href="instagram"> <svg class="social-icon">
+              <use href="./img/symbol-defs.svg#icon-instagram"></use>
+            </svg> </a>
+        </li>
+        <li><a class="footer-link-icon" href="twitter"> <svg class="social-icon">
+              <use href="./img/symbol-defs.svg#icon-twitter"></use>
+            </svg> </a></li>
+        <li><a class="footer-link-icon" href="facebook"> <svg class="social-icon">
+              <use href="./img/symbol-defs.svg#icon-facebook"></use>
+            </svg> </a></li>
+        <li><a class="footer-link-icon" href="linkedin"> <svg class="social-icon">
+              <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+            </svg> </a></li>
+      </ul>
+    </section>
     </div>
 </footer>
 </body>
