--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,13 @@
                     </nav>
                     <div class="container-nav">
                         <ul class="nav-contacs">
-                            <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-                            <li><a href="tel:+380961111111"> +38 096 111 11 11</a></li>
+                            <li><a class="contact-item" href="mailto:info@devstudio.com">
+                                    <svg class="link-icon">
+                                        <use href="./img/symbol-defs.svg#icon-envelope-hover"></use>
+                                    </svg> info@devstudio.com</a></li>
+                            <li><a class="contact-item" href="tel:+380961111111"><svg class="link-icon">
+                                        <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+                                    </svg> +38 096 111 11 11</a></li>
                         </ul>
                     </div>
                     </div>
@@ -93,16 +98,37 @@
     </main>
         <footer class="footer-section">
             <div class="footer container">
-                <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
-                <div class="footer-address">
-                    <address class="address">
-                        г. Киев, пр-т Леси Украинки, 26
-                    </address>
-                    <address class="address-contact">
-                        <a href="mailto:info@example.com">info@example.com</a>
-                        <br><a href="tel:+380991111111">+38 099 111 11 11</a>
-                    </address>
+                <div class="footer-inf">
+                    <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+        
+                    <div class="footer-address">
+                        <address class="address">
+                            г. Киев, пр-т Леси Украинки, 26
+                        </address>
+                        <address class="address-contact">
+                            <a href="mailto:info@example.com">info@example.com</a>
+                            <br><a href="tel:+380991111111">+38 099 111 11 11</a>
+                        </address>
+                    </div>
                 </div>
+                <section class="action">
+                    <p>Присоединяйтесь</p>
+                    <ul class="footer-social-list">
+                        <li><a class="footer-link-icon" href="instagram"> <svg class="social-icon">
+                                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                </svg> </a>
+                        </li>
+                        <li><a class="footer-link-icon" href="twitter"> <svg class="social-icon">
+                                    <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                </svg> </a></li>
+                        <li><a class="footer-link-icon" href="facebook"> <svg class="social-icon">
+                                    <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                </svg> </a></li>
+                        <li><a class="footer-link-icon" href="linkedin"> <svg class="social-icon">
+                                    <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                </svg> </a></li>
+                    </ul>
+                </section>
             </div>
         </footer>
         </body>
