--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <ul class="features">
         <li class="features-item">
            <div class="thumb">
-          <svg class="features-icon">
-            <use href="./img/symbol-defs.svg#icon-antenna" width="70px" height="70px"></use>
+          <svg class="features-icon" width="70px" height="70px">
+            <use href="./img/symbol-defs.svg#icon-antenna" ></use>
           </svg>
           </div>
         <h3 class="title-features">Внимание к деталям</h3>
@@ -61,8 +61,8 @@
         формированию позиции.</p></li>
         <li class="features-item">
           <div class="thumb">
-          <svg class="features-icon">
-            <use href="./img/symbol-defs.svg#icon-clock" width="70px" height="70px"></use>
+          <svg class="features-icon" width="70px" height="70px">
+            <use href="./img/symbol-defs.svg#icon-clock"></use>
           </svg>
           </div>
         <h3 class="title-features">Пунктуальность</h3>
@@ -70,8 +70,8 @@
         формированию позиции.</p></li>
         <li class="features-item">
           <div class="thumb">
-          <svg class="features-icon">
-            <use href="./img/symbol-defs.svg#icon-diagram" width="70px" height="70px"></use>
+          <svg class="features-icon" width="70px" height="70px">
+            <use href="./img/symbol-defs.svg#icon-diagram"></use>
           </svg>
           </div>
         <h3 class="title-features">Планирование</h3>
@@ -80,8 +80,8 @@
         </li>
         <li class="features-item">
           <div class="thumb">
-          <svg class="features-icon">
-            <use href="./img/symbol-defs.svg#icon-astronaut" width="70px" height="70px"></use>
+          <svg class="features-icon" width="70px" height="70px">
+            <use href="./img/symbol-defs.svg#icon-astronaut"></use>
           </svg>
           </div>
         <h3 class="title-features">Современные технологии</h3>
@@ -126,33 +126,33 @@
               <use href="./img/symbol-defs.svg#icon-facebook"></use>
             </svg> </a>
           </li>
-          <li class="social-item" class="social-item">
+          <li class="social-item">
           <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
               <use href="./img/symbol-defs.svg#icon-linkedin"></use>
             </svg> </a>
-          </li class="social-item" class="social-item">
+          </li>
          </ul>
         </li>
           <li><img src="./img/Репина.jpg" alt="#" width="270" height="260">
           <h3 class="teammate-name">Ольга Репина</h3>
           <p class="teammate-name-posittion">Frontend Developer</p>
         <ul class="social-list">
-          <li class="social-item" class="social-item">
+          <li class="social-item">
             <a class="socila-link-icon" href="instagram"> <svg class="social-icon">
                 <use href="./img/symbol-defs.svg#icon-instagram"></use>
               </svg> </a>
           </li>
-          <li class="social-item" class="social-item">
+          <li class="social-item">
             <a class="socila-link-icon" href="twitter"> <svg class="social-icon">
                 <use href="./img/symbol-defs.svg#icon-twitter"></use>
               </svg> </a>
           </li>
-          <li class="social-item" class="social-item">
+          <li class="social-item">
             <a class="socila-link-icon" href="facebook"> <svg class="social-icon">
                 <use href="./img/symbol-defs.svg#icon-facebook"></use>
               </svg> </a>
           </li>
-          <li class="social-item" class="social-item">
+          <li class="social-item">
             <a class="socila-link-icon" href="linkedin"> <svg class="social-icon">
                 <use href="./img/symbol-defs.svg#icon-linkedin"></use>
               </svg> </a>
@@ -215,41 +215,41 @@
         </div>
     </section>
     <section class="partner">
-      <div class="container"></div>
+      <div class="container">
       <h1>Постоянные клиенты</h1>
       <ul class="partner-list">
       <li>
-        <a class="partner-link-icon" href="ya$co"> <svg class="partner-icon">
-            <use href="./img/symbol-defs.svg#icon-logo-1" width="44px" height="49px"></use>
+        <a class="partner-link-icon" href="ya$co"> <svg class="partner-icon" width="45px" height="50px">
+            <use href="./img/symbol-defs.svg#icon-logo-1"></use>
           </svg> </a>
       </li>
       <li>
-        <a class="partner-link-icon" href="tagline here"> <svg class="partner-icon">
-            <use href="./img/symbol-defs.svg#icon-logo-2 " width="40" height="52"></use>
+        <a class="partner-link-icon" href="tagline-here"> <svg class="partner-icon" width="40px" height="52px">
+            <use href="./img/symbol-defs.svg#icon-logo-2" ></use>
           </svg> </a>
       </li>
       <li>
-        <a class="partner-link-icon" href="company"> <svg class="partner-icon">
-            <use href="./img/symbol-defs.svg#icon-Object" width="41" height="42"></use>
+        <a class="partner-link-icon" href="company"> <svg class="partner-icon" width="41px" height="43px">
+            <use href="./img/symbol-defs.svg#icon-Object" ></use>
           </svg> </a>
       </li>
       <li>
-        <a class="partner-link-icon" href="fosterpeters"> <svg class="partner-icon">
-            <use href="./img/symbol-defs.svg#icon-logo-4" width="80px" height="42px"></use>
+        <a class="partner-link-icon" href="fosterpeters"> <svg class="partner-icon" width="80px" height="42px">
+            <use href="./img/symbol-defs.svg#icon-logo-4" ></use>
           </svg> </a>
       </li>
       <li>
-        <a class="partner-link-icon" href="brand"> <svg class="partner-icon">
-            <use href="./img/symbol-defs.svg#icon-logo-5" width="59" height="47"></use>
+        <a class="partner-link-icon" href="brand"> <svg class="partner-icon" width="59px" height="47px">
+            <use href="./img/symbol-defs.svg#icon-logo-5" ></use>
           </svg> </a>
       </li>
       <li>
-        <a class="partner-link-icon" href="tagline"> <svg class="partner-icon">
-            <use href="./img/symbol-defs.svg#icon-Object-1"width="88" height="45"></use>
+        <a class="partner-link-icon" href="tagline"> <svg class="partner-icon" width="89px" height="46px">
+            <use href="./img/symbol-defs.svg#icon-Object-1" ></use>
           </svg> </a>
       </li>
       </ul>
-
+</div>
     </section>
 </main>
         <!-- Футер -->
