--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 <div class="container-nav">
      <ul class="nav-contacs">
       <li><a class="contact-item" href="mailto:info@devstudio.com">
-        <svg class="link-icon">
-          <use href="./img/symbol-defs.svg#icon-envelope-hover"></use> </svg> info@devstudio.com</a></li>
-      <li><a class="contact-item" href="tel:+380961111111"><svg class="link-icon">
+        <svg class="link-icon" width="16" height="12">
+          <use href="./img/symbol-defs.svg#icon-envelope-hover"></use> 
+        </svg> info@devstudio.com</a></li>
+      <li><a class="contact-item" href="tel:+380961111111"><svg class="link-icon"width="10" height="16" >
         <use href="./img/symbol-defs.svg#icon-smartphone"></use>
       </svg> +38 096 111 11 11</a></li>
      </ul>
