--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                 <nav class="site-nav">
                     <a class="logo" href="./index.html"><span>Web</span>Studio</a>
                     <ul class="menu-nav">
-                        <li><a class="link" href="#">Студия</a></li>
+                        <li><a class="link" href="index.html">Студия</a></li>
                     <li><a class="link-current" href="./portfolio.html">Портфолио</a></li>
                     <li><a class="link" href="#">Контакты</a></li>
                     </ul>
@@ -26,14 +26,15 @@
                     <div class="container-nav">
                         <ul class="nav-contacs">
                             <li><a class="contact-item" href="mailto:info@devstudio.com">
-                                    <svg class="link-icon">
+                                    <svg class="link-icon" width="16" height="12">
                                         <use href="./img/symbol-defs.svg#icon-envelope-hover"></use>
                                     </svg> info@devstudio.com</a></li>
-                            <li><a class="contact-item" href="tel:+380961111111"><svg class="link-icon">
+                            <li><a class="contact-item" href="tel:+380961111111"><svg class="link-icon" width="10" height="16">
                                         <use href="./img/symbol-defs.svg#icon-smartphone"></use>
                                     </svg> +38 096 111 11 11</a></li>
                         </ul>
                     </div>
+    </div>
                     </div>
                     </header>
         <main>
